# pipecalc

./: README.md  pyproject.toml  vercel.json
api/: index.py
app/: database.py
