[project]
name = "pipecalc"
version = "1.0.0"
description = "Angebotskalkulation Rohrleitungstiefbau"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-multipart==0.0.9",
    "lxml==5.2.1",
    "httpx==0.27.0",
]
